# Laborat-rio-de-S202

./: pyproject.toml  relatorio_1.py  relatorio_2.classes.json
relatorio_3/: database.py  main.py  pokedex.py
relatorio_3/dataset/: pokemon_dataset.py
relatorio_3/json/: log-26582b43-4d95-49e1-a233-299d1ed57bba.json  log-721477c1-faf1-4741-92c3-3075c1091b77.json  log-7bbd71d1-5d16-456e-ab5c-cf034a1e8c93.json  log-8a7d2d30-2867-4ae0-988c-99e07de12f2b.json  log-af987bc4-f566-41de-89ea-c846e366c91a.json  log-b61d7c9f-f856-4c01-9fea-7b71bd1ca5d8.json  log-c8ccfa4d-93e2-45d0-9b96-6ff8c7c7720c.json  log-cf6fca22-db78-46b5-a7b1-42bfbb0bb644.json  log-ddd42811-e308-4e32-b615-a11b43ae837b.json  log-e864bd84-a2e2-449a-af86-a213a95a3db5.json
relatorio_5/: book_crud.py  main.py
